Closed
Bug 605979
Opened 15 years ago
Closed 14 years ago
"ASSERTION: IDN node too large" with globalStorage.namedItem
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla7
People
(Reporter: jruderman, Assigned: szu.han.chang)
Details
(Keywords: assertion, testcase, Whiteboard: [good first bug][mentor=jdm])
Attachments
(2 files)
|
134 bytes,
text/html
|
Details | |
|
1.45 KB,
patch
|
mayhemer
:
review+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: IDN node too large: 'Error', file netwerk/dns/nsIDNService.cpp, line 589
Comment 1•15 years ago
|
||
From RFC 2181:
"The length of any one label is limited to between 1 and 63 octets. A full domain name is limited to 255 octets (including the separators)."
Your example is using a domain name with a label larger then 63 octets. It is simply not a valid domain name.
If this bug is about showing a more meaningful message to the user, then please reopen, rename and suggest what the behavior should be. True is that the message that is shown in the error console is not very useful.
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → INVALID
| Reporter | ||
Comment 2•15 years ago
|
||
Status: RESOLVED → REOPENED
Resolution: INVALID → ---
| Reporter | ||
Comment 3•15 years ago
|
||
If it's ok as far as the code is concerned, you should change the assertion into an NS_WARNING or remove it. (You can additionally add a warning in Firefox's error console if you want, or make it return something more specific than NS_ERROR_FAILURE, but I care less about that than not having bogus assertions.)
| Reporter | ||
Comment 4•14 years ago
|
||
See also bug 464799.
Comment 5•14 years ago
|
||
http://mxr.mozilla.org/mozilla-central/source/netwerk/dns/nsIDNService.cpp#589
http://mxr.mozilla.org/mozilla-central/source/netwerk/dns/nsIDNService.cpp#607
This would be a good bug for someone just getting started with contributing to Firefox. The links above are to NS_ERROR calls which should instead be NS_WARNING.
Whiteboard: [good first bug] [mentor=jdm]
I just changed the two lines from NS_ERROR to NS_WARNING as specified in the comments. I then ran make check from the obj/ directory and all tests passed except for one which is accounted for by a timezone bug.
(https://bugzilla.mozilla.org/show_bug.cgi?id=515254)
Should be relatively straightforward, at least I hope - this is my first contribution so be gentle, I'm still a noob!
Attachment #540976 -
Flags: review?
Attachment #540976 -
Flags: review? → review?(josh)
Comment 7•14 years ago
|
||
Comment on attachment 540976 [details] [diff] [review]
Proposed fix
Over to Honza, who's a peer of this code.
Attachment #540976 -
Flags: review?(josh) → review?(honzab.moz)
Comment 8•14 years ago
|
||
Comment on attachment 540976 [details] [diff] [review]
Proposed fix
Review of attachment 540976 [details] [diff] [review]:
-----------------------------------------------------------------
Ah, yes, ok. Got of my radar :) Thanks!
r=honzab
Attachment #540976 -
Flags: review?(honzab.moz) → review+
Updated•14 years ago
|
Keywords: checkin-needed
Updated•14 years ago
|
Assignee: nobody → szu.han.chang
Comment 9•14 years ago
|
||
Status: REOPENED → ASSIGNED
Flags: in-testsuite?
Keywords: checkin-needed
OS: Mac OS X → All
Hardware: x86 → All
Whiteboard: [good first bug] [mentor=jdm] → [inbound][good first bug][mentor=jdm]
Target Milestone: --- → mozilla7
Comment 10•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 15 years ago → 14 years ago
Resolution: --- → FIXED
Whiteboard: [inbound][good first bug][mentor=jdm] → [good first bug][mentor=jdm]
Comment 11•14 years ago
|
||
Verified on:
Mozilla/5.0 (Windows NT 6.1; rv:7.0) Gecko/20100101 Firefox/7.0
Build ID: 20110908135051
Mozilla/5.0 (Windows NT 6.1; rv:8.0a2) Gecko/20110914 Firefox/8.0a2
Build ID: 20110914042005
Mozilla/5.0 (Windows NT 6.1; rv:9.0a1) Gecko/20110915 Firefox/9.0a1
Build ID: 20110915030845
When loading the test case attached by the reporter, the following error is displayed in the web and error consoles:
uncaught exception: [Exception... "Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIDOMStorageList.namedItem]" nsresult: "0x80004005 (NS_ERROR_FAILURE)" location: "JS frame :: https://bug605979.bugzilla.mozilla.org/attachment.cgi?id=484830 :: <TOP_LEVEL> :: line 3" data: no]
No warnings are displayed in any of the consoles.
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•