Bug 605979 - Remove unsound ASSERTION: IDN node too large (hit with globalStorage.namedItem); r=mayhemer